# text-extraction

./: .gitignore  Dockerfile  README.md  README.org  compose.yml  flake.nix  overlays.nix  package.nix  pyproject.toml  python-lib.nix  requirements.txt  setup.py  shell.nix
.github/workflows/: docker-build.yaml  python.yml
text_extraction/: __init__.py  fake_user_agent.py  grab_content.py  markitdown_helper.py  models.py  rate_limiting.py  webservice.py
