[project]
name = "text-extraction"
version = "0.3.0"
description = "A library and micro-service that utilizes trafilatura and markitdown in order to extract text from URLs."
authors = [
    {name = "Josefine Katzke"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fake-useragent>=2.2.0",
    "fastapi[standard]>=0.116.1",
    "loguru>=0.7.3",
    "markitdown[all]>=0.1.2",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "playwright>=1.54.0",
    "py3langid>=0.3.0",
    "pydantic>=2.11.7",
    "pyrate-limiter>=3",
    "requests>=2.32.5",
    "ruff>=0.12.10",
    "setuptools>=80.9.0",
    "trafilatura>=2.0.0",
    "uvicorn>=0.35.0",
]

[project.scripts]
text-extraction = "text_extraction.webservice:main"

[project.urls]
Homepage = "https://github.com/openeduhub/text-extraction"
Repository = "https://github.com/openeduhub/text-extraction.git"
Issues = "https://github.com/openeduhub/text-extraction/issues"

[build-system]
# see: https://docs.astral.sh/uv/concepts/build-backend/#choosing-a-build-backend
requires = ["uv_build >= 0.8.12, <0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# see: https://docs.astral.sh/uv/concepts/build-backend/#modules
module-name = "text_extraction"
# by default, uv assumes a "src/"-structure as the module-root, which needs to be changed to the project root dir:
module-root = ""
